After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770642 - sharing: Fix the wrong argument for gsd_sharing_manager_handle_service
sharing: Fix the wrong argument for gsd_sharing_manager_handle_service
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: sharing
3.21.x
Other Linux
: Normal critical
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2016-08-31 12:47 UTC by Hyungwon Hwang
Modified: 2016-08-31 16:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
This patch fixes it by replacing the string with a ServiceInfo. (13.99 KB, patch)
2016-08-31 12:47 UTC, Hyungwon Hwang
rejected Details | Review
sharing: Fix function arguments (2.42 KB, patch)
2016-08-31 15:57 UTC, Bastien Nocera
committed Details | Review

Description Hyungwon Hwang 2016-08-31 12:47:59 UTC
Created attachment 334530 [details] [review]
This patch fixes it by replacing the string with a ServiceInfo.

gsd_sharing_manager_handle_service() takes the forth argument which
is ServiceInfo not a string.

This patch fixes it by replacing the string with a ServiceInfo.
Comment 1 Bastien Nocera 2016-08-31 15:49:09 UTC
Comment on attachment 334530 [details] [review]
This patch fixes it by replacing the string with a ServiceInfo.

This isn't a gnome-settings-daemon patch.
Comment 2 Bastien Nocera 2016-08-31 15:57:42 UTC
Created attachment 334538 [details] [review]
sharing: Fix function arguments

e0b7f41 was committed after some code massaging, which resulted the
wrong arguments being passed to a few functions,
gsd_sharing_manager_handle_service() amongst them.
Comment 3 Bastien Nocera 2016-08-31 16:01:39 UTC
Attachment 334538 [details] pushed as 5b6b26e - sharing: Fix function arguments