sharing: Fix function arguments

e0b7f41 was committed after some code massaging, which resulted the
wrong arguments being passed to a few functions,
gsd_sharing_manager_handle_service() amongst them.

https://bugzilla.gnome.org/show_bug.cgi?id=770642