plugins/sharing/gsd-sharing-manager.c
@@ -124,7 +124,6 @@ handle_unit_cb (GObject      *source_object,
 static void
 gsd_sharing_manager_handle_service (GsdSharingManager   *manager,
                                     const char          *method,
-                                    GAsyncReadyCallback  callback,
                                     ServiceInfo         *service)
 {
         char *service_file;
@@ -140,8 +139,8 @@ gsd_sharing_manager_handle_service (GsdSharingManager   *manager,
                                 G_DBUS_CALL_FLAGS_NONE,
                                 -1,
                                 manager->priv->cancellable,
-                                callback,
-                                manager);
+                                handle_unit_cb,
+                                (gpointer) method);
         g_free (service_file);
 }
 
@@ -154,8 +153,7 @@ gsd_sharing_manager_start_service (GsdSharingManager *manager,
         /* We use StartUnit, not StartUnitReplace, since the latter would
          * cancel any pending start we already have going from an
          * earlier _start_service() call */
-        gsd_sharing_manager_handle_service (manager, "StartUnit",
-                                            handle_unit_cb, "start");
+        gsd_sharing_manager_handle_service (manager, "StartUnit", service);
 }
 
 static void
@@ -164,8 +162,7 @@ gsd_sharing_manager_stop_service (GsdSharingManager *manager,
 {
         g_debug ("About to stop %s", service->name);
 
-        gsd_sharing_manager_handle_service (manager, "StopUnit",
-                                            handle_unit_cb, "stop");
+        gsd_sharing_manager_handle_service (manager, "StopUnit", service);
 }
 
 #ifdef HAVE_NETWORK_MANAGER
